2002-03-09 Alexander Rawass <alexannika@users.sourceforge.net>

	* director:
	  ai_orderlist now remembers order when re-launched
	* added findOrderList to Order
	* replaced messy vegastrike.config with older version


2002-03-09 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* fixed crosshairs in firefly/hornet cockpit
	* interpreter:
	  - deleting class instances correctly
	  - faster variable lookup (not working yet)
	  - better fatal error output (stackdump)
	* modified Order::~Order()
	  the suborders get now deleted correctly


2002-03-08 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* ai_orderlist now faster
	* added scanSystem() to Unit class

	
2002-03-07 Daniel Horn <hellcatv@hotmail.com>
	* also had to add gui to src/Makefile.am...strange
	* added gui to configure.in
	* Switched stars to use animations instead of lights so they will not appear 'through' other objects
	* switched any strange OpenGL state vs was setting for the GUI

2002-03-07 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* ai_orderlist now basically working
	* had to add gui to src/Makefile.am

	
2002-03-06 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* homepage/docu
	  added bugs/todo section
	* exporer-missions: fixed? nan-velocity/position bug
	* ordered the missions dir new
	* ai_orderlist (still experimental)
	

2002-03-06 Corey O'Connor <zoldar256@users.sourceforge.net>
        * A few small changes to OS X target
	  - GLUT mission selector now compiles
	  - VegaStrikeOSXApp now includes GLUT mission selector
	    as a front end to the vegastrike executable in 
	    Resources.

2002-03-05 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* homepage/docu
	  - added force feedback section

	
2002-03-04 Daniel Horn <hellcatv@hotmail.com>
	* Added text over viewscreen
	* Added glow to stars....
	* Made glow work at infinite distance instaed of twinking out
	* Added default Jump, Planet and Sun HudImages